<resources>
    <string name="app_name">EnGames</string>
    <string name="auth_title">Sign In</string>
    <string name="auth_subtitle">Welcome to the best English learning app in whole world!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="reg_title">Sign Up now!</string>
    <string name="reg_subtitle">When you register in this app\nyou gives us full rights to make\nyour process of learning English very interesting</string>
    <string name="register_butt_text">Sign Up</string>
    <string name="privacy_policy">I agree that my data will be used to improve my gaming experience</string>
    <string name="repeat_password">Repeat password</string>
    <string name="no_account_title">Don`t have account?</string>
    <string name="yes_account_title">Have account?</string>
    <string name="auth_checkbox_text">Remember me</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="password_length_require">The password must be at least 6 characters long.</string>
    <string name="password_mismatch">The passwords do not match</string>
    <string name="username_length_require">Username must be at least 4 characters long</string>
    <string name="privacy_agreement">Agree with using conditions</string>
    <string name="games_title">Games</string>
    <string name="profile_title">Profile</string>
    <string name="about_title">About this app</string>
    <string name="settings_title">Settings</string>
    <string name="statistic_title">Statistic</string>
    <string name="about_info">Learn a Language with Fun and Ease!\nStep into an exciting world of learning where every task feels like a game, and every achievement brings you closer to fluency.\n\nNo More Boring Lessons\nSay goodbye to dry grammar drills. Our app turns language learning into an engaging adventure with levels, points, rewards, and surprises.\n\nPerfect for All Skill Levels\nFrom complete beginners to confident users — you progress step by step with clear tasks and helpful support.\n\nLearn Anytime, Anywhere\nOur gamified system keeps you motivated. Study on the go, during breaks, or while relaxing at home.</string>
    <string name="have_something_to_say">Have something to say?</string>
    <string name="write_us">Write Us!</string>
    <string name="creator_email">mailto:mihail.mozohin@tatar.ru</string>
    <string name="engames_issue">EnGames issue</string>
    <string name="gender">Gender</string>
    <string name="base_gender">Male</string>
    <string name="save_changes">Save Changes</string>
    <string name="new_password">New password</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_rustore">Rate us in RuStore</string>
    <string name="share_link">Share link with friends</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="ru">RU</string>
    <string name="en">EN</string>
    <string name="ru_ru">ru-RU</string>
    <string name="en_en">en-EN</string>
    <string name="Camera">📷 Камера</string>
    <string name="gallery">🖼️ Галерея</string>
    <string name="pick_image_resource">Выберите источник изображения</string>
    <string name="camera_permission">Camera permission</string>
    <string name="access_camera">We need access to your camera to take photos.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="make_answer">Make answer</string>
    <string name="game_enter_title">Translate this word</string>
    <string name="timeout_exception">Timeout exception</string>
    <string name="internet_excepteion">Internet exception</string>
    <string name="user_not_found">Failed to find user</string>
    <string name="exception">Unknown exception</string>
    <string name="the_word_is">The word is:</string>
    <string name="write_translation_here">write translation here</string>
    <string name="en_digits">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="game_connect_title">Drag words to translation</string>
    <string name="successfully_authorized">Successfully authorized</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="successfully_logout">Successfully logout</string>
    <string name="failed_to_get_user">Failed to get user</string>
    <string name="of_creation">" of creation"</string>
    <string name="cant_delete_account">Failed to delete account</string>
    <string name="cant_logout">Failed to log out of account</string>
    <string name="you_won">You Won!</string>
    <string name="you_lose">You Lose(</string>
    <string name="select_translation">"Choose translation of word:\n"</string>
    <string name="select_wrong">"Choose a word that is not on topic:\n"</string>
    <string name="you_wrong">You take mistake\n</string>
    <string name="correct_word_is">"The correct word is: "</string>
    <string name="you_get">"You get "</string>
    <string name="points">" points!"</string>
    <string name="file_read_error">File read error</string>
    <string name="failed_to_load_photo">Failed to load photo</string>
    <string name="image_loaded">image loaded</string>
    <string name="coming_soon">Coming soon</string>
    <string name="changes_not_save">\nThe changes were not saved</string>
    <string name="want_delete_account">Are you sure you want to delete your account?</string>
    <string name="confirmation">Confirmation</string>
    <string name="ok">Ok</string>
    <string name="account_restored">Account restored</string>
    <string name="try_again">Try again next time</string>
    <string name="keep_up">Keep up the good work</string>
    <string name="statistics_not_saved">Unknown exception\nStatistics not saved</string>
    <string name="you_guess">You guess </string>
    <string name="wait_for_record">We can\'t wait for you to come back and break your record!</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="share_statistic">Share Statistic</string>
    <string name="author_name">Мозохин Михаил Александрович</string>
    <string name="the_game_list_could_t_be_loaded">The game list could\'t be loaded</string>
    <string name="your_opinion_is_important">Your opinion is important to us</string>
</resources>