<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".presentation.fragment.SettingsFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:theme="@style/TitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/themeTxt"
        style="@style/SubTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <com.github.angads25.toggle.widget.LabeledSwitch
        android:id="@+id/switchTheme"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        app:colorBorder="@color/red"
        app:textOn="@string/dark"
        app:textOff="@string/light"
        app:colorOn="@color/switch_light"
        app:colorOff="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="@+id/themeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/themeTxt" />

    <TextView
        android:id="@+id/languageTxt"
        style="@style/SubTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeTxt" />

    <com.github.angads25.toggle.widget.LabeledSwitch
        android:id="@+id/languageSwitch"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        app:colorBorder="@color/red"
        app:colorOff="@color/cardview_dark_background"
        app:colorOn="@color/switch_light"
        app:layout_constraintBottom_toBottomOf="@+id/languageTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/languageTxt"
        app:on="false"
        app:textOff="@string/en"
        app:textOn="@string/ru" />

    <ImageView
        android:id="@+id/shareImg"
        style="@style/IconsStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/share_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/rateUsTxt"
        style="@style/SubTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/rate_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareImg" />

    <TextView
        android:id="@+id/shareLinkTxt"
        style="@style/SubTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/share_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateUsTxt" />

    <TextView
        android:id="@+id/deleteAccountBtn"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:text="@string/delete_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/logOutAccountBtn"
        style="@style/LogoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/log_out"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/deleteAccountBtn"
        tools:layout_editor_absoluteX="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>